[package]
name = "ball_in_a_box"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = {git = "https://github.com/not-fl3/macroquad", rev = "2e48cf9", features = ["audio"]}
nanoserde = "0.1.37"
quad-rand = "0.2.2"

[patch.crates-io]
miniquad = {git = "https://github.com/InZan17/miniquad", branch = "ball-in-a-box"}

[profile.release]
strip = true
opt-level = 3
lto = true