[package]
name = "ball_in_a_box"
version = "1.0.0"
edition = "2021"

[dependencies]
circular-buffer = "0.1.9"
macroquad = {git = "https://github.com/inzan17/macroquad", branch = "ball-in-a-box", features = ["audio"]}
nanoserde = {git = "https://github.com/inzan17/nanoserde", rev = "6e42d4c"}
quad-rand = "0.2.2"

[build-dependencies]
image = { version = "0.24", default-features = false, features = ["png", "ico"] }
winresource = { version = "0.1.19", default-features = false }

[patch.crates-io]
miniquad = {git = "https://github.com/InZan17/miniquad", branch = "ball-in-a-box"}

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
strip = true
debug-assertions = false
overflow-checks = false
